// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LockErrors component component snapshots no failure 1`] = `
<ReviewError
  headingMessage={
    Object {
      "defaultMessage": "Invalid request. Please check your input.",
      "description": "Error lock request for missing params",
      "id": "ora-grading.ReviewModal.errorLockBadRequestHeading",
    }
  }
  key="lockFailed"
>
  <FormattedMessage
    defaultMessage="Invalid request. Please check your input."
    description="Error lock request for missing params"
    id="ora-grading.ReviewModal.errorLockBadRequest"
  />
</ReviewError>
`;

exports[`LockErrors component component snapshots snapshot: error with bad request 1`] = `
<ReviewError
  headingMessage={
    Object {
      "defaultMessage": "Invalid request. Please check your input.",
      "description": "Error lock request for missing params",
      "id": "ora-grading.ReviewModal.errorLockBadRequestHeading",
    }
  }
  key="lockFailed"
>
  <FormattedMessage
    defaultMessage="Invalid request. Please check your input."
    description="Error lock request for missing params"
    id="ora-grading.ReviewModal.errorLockBadRequest"
  />
</ReviewError>
`;

exports[`LockErrors component component snapshots snapshot: error with conflicted lock 1`] = `
<ReviewError
  headingMessage={
    Object {
      "defaultMessage": "The lock owned by another user",
      "description": "Error lock by someone else",
      "id": "ora-grading.ReviewModal.errorLockContestedHeading",
    }
  }
  key="lockFailed"
>
  <FormattedMessage
    defaultMessage="The lock owned by another user"
    description="Error lock by someone else"
    id="ora-grading.ReviewModal.errorLockContested"
  />
</ReviewError>
`;
